# pontia-ml

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  conftest.py  pyproject.toml  pytest.ini  render.yaml  requirements.txt
.devcontainer/: devcontainer.json
2.Proyecto Final de Módulo/: README.md
agents/: code-quality-tasks.md  deep_analysis_report.md  simplification-analysis.md
api/: README.md  __init__.py  main.py  schemas.py  service.py
docs/: arquitectura.md  glosario.md  informe_final.md  interpretabilidad.md  plan_despliegue_mlflow.md  visualizacion_2d.md
memoria/: generar_figuras_eda.py  memoria.tex
notebooks/: 01_eda.ipynb  02_entrenamiento_y_comparativa.ipynb  02_modelo_regresion_logistica.ipynb  03_balanceo_clases.ipynb  03_modelo_arbol_decision.ipynb  04_interpretabilidad_shap.ipynb  04_modelo_random_forest.ipynb  05_inferencia.ipynb  05_modelo_xgboost.ipynb  06_modelo_red_neuronal.ipynb  07_comparativa_modelos.ipynb  08_balanceo_clases.ipynb  09_no_supervisado.ipynb  10_interpretabilidad_shap.ipynb  README.md  _PLANTILLA_modelo.ipynb
outputs/: best_hiperparametros.json  metricas_modelos.csv  metricas_modelos.md  tuning_hiperparametros.md
project/: .gitignore  README.md  render.yaml  requirements-train.txt  requirements.txt
recursos/: clase_1_introduccion_ml_live.ipynb  clase_2_modelos_supervisados_live.ipynb  clase_3_modelos_no_supervisados_live.ipynb  clase_4_introduccion_deep_learning_live.ipynb  clase_5_deep_learning_cnn_embeddings_autoencoders_live.ipynb
src/: balancing.py  config.py  data_loader.py  evaluator.py  interpretability.py  model_factory.py  model_trainer.py  predict.py  preprocessing.py  register_model.py  train.py  tuning.py  visualization_2d.py
tests/: test_api.py  test_api_extra.py  test_config.py  test_contracts.py  test_data_loader.py  test_evaluate.py  test_evaluator.py  test_predict.py  test_preprocessing.py  test_ui.py
ui/: README.md  __init__.py  app.py  booking.py  data.py  (+2 more)
(+102 files in other folders)
